force-app/main/default/objects/npsp__Error_Settings__c/npsp__Error_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings that control your error management configuration.</description>
    <label>Configuración de errores</label>
</CustomObject>