force-app/main/default/objects/npsp__Error_Settings__c/fields/npsp__DisableRecordDataHealthChecks__c.field-meta.xml
<CustomField>
    <fullName>npsp__DisableRecordDataHealthChecks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether record data related health checks are disabled</description>
    <inlineHelpText>Comprobación de estado solo comprueba los parámetros de su configuración de NPSP buscando problemas. Seleccione esta opción si su organización tiene un gran número de registros y Comprobación de estado está teniendo dificultades para completarse.</inlineHelpText>
    <label>Disable Record Data Health Checks</label>
    <type>Checkbox</type>
</CustomField>