force-app/main/default/objects/npsp__Error_Settings__c/fields/npsp__Error_Notifications_On__c.field-meta.xml
<CustomField>
    <fullName>npsp__Error_Notifications_On__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that determines whether to send error notifications.</description>
    <inlineHelpText>Marque esta opción si se desea que el sistema publique notificaciones de cierto tipo de errores.</inlineHelpText>
    <label>Error Notifications</label>
    <type>Checkbox</type>
</CustomField>