force-app/main/default/objects/npsp__Error_Settings__c/fields/npsp__Store_Errors_On__c.field-meta.xml
<CustomField>
    <fullName>npsp__Store_Errors_On__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag that indicates whether errors are going to be stored in the database.</description>
    <inlineHelpText>Marque esta opción si se quiere que los errores se guarden en la base de datos.</inlineHelpText>
    <label>Store Errors</label>
    <type>Checkbox</type>
</CustomField>